fixed overflowing bmet item height, but removed arrow and hover state in the process

--- a/app/assets/stylesheets/Application/facilities_app.css.scss
+++ b/app/assets/stylesheets/Application/facilities_app.css.scss
@@ -418,6 +418,10 @@ body {
 			padding-top: 10px;
 		}
 	}
+
+	#mid-summary_ul a .mid-summary_ul_li {
+		height: auto;
+	}
 }
 
 
